# weeniegame

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  open_backyard_map_editor_mac.command  package-lock.json  package.json  rerun_backyard_greybox_planner_mac.command  tsconfig.json  vite.config.ts
backyard_reference_importer_tool/: README.md  open_unity_project_mac.command  run_backyard_import_mac.command  run_backyard_import_windows.bat
docs/: AGENT-IMPLEMENTATION-QUEUE.md  AGENT-PR-CHECKLIST.md  AGENT-SPRINT-01.md  ANIMATION-STATE-CATALOG.md  ARCHITECTURE.md  ARENA-PLAYABLE.md  ART-DIRECTION.md  ART-INTEGRATION-SLICE.md  ART-SOURCE-INVENTORY.md  ASSET-CATALOG.md  ASSET-PRODUCTION-CATALOG.md  AUDIO-DIRECTION.md  BACKYARD-CAPTURE-IMPORT.md  BASELINE-COUCH-PLAYTEST-2026-06-20.md  BOSS-DESIGN-FRAMEWORK.md  BUILD-PLAN.md  CAMPAIGN-PROGRESSION.md  CHARACTER-MOTION-GENERATION.md  CHARACTER-MOTION-PACK.md  CODEX-GOAL-COYOTES-FENCE.md  CODEX-GOAL-EAGLE-SHADOW.md  CODEX-GOAL-SQUIRREL-CONSPIRACY.md  CONTENT-VARIANTS-SYSTEM.md  COOP-PUZZLE-ART-NEEDS.md  COOP-PUZZLE-DESIGN.md  COOP-PUZZLE-PRIMITIVES.md  COOP-VISION.md  DEEP-SLICE-OPERATION-PEE-BREAK.md  DESIGN-REVIEW-2026-06.md  DIFFICULTY-FRAMEWORK.md  FAMILY-SHOWCASE-MANUAL-TEST.md  GAME-DESIGN-BIBLE.md  GAMEMANAGER-WIRING-GUIDE.md  GAMEPLAY-FIRST-GREYBOX-PIVOT.md  LAUNCH-VERTICAL-SLICE.md  LEVEL-IDEAS.md  LEVEL-READINESS-SCORES.md  MECHANICS.md  (+25 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+414 files in other folders)
