[package]
name = "cheddar-and-cocoa"
version = "0.1.0"
description = "Cheddar & Cocoa — couch co-op dachshund game"
authors = ["Kenneth Chapman"]
edition = "2021"
rust-version = "1.77.2"

# The desktop binary links against this lib; the same lib is the mobile entry point
# (Tauri v2 builds iOS/Android from the same crate — see docs/WRAPPERS.md).
[lib]
name = "cheddar_and_cocoa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Smaller, faster release bundles for the shipped game.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
